# mcp-server

./: README.md  pyproject.toml
resources/: greeting.txt
src/: server.py
src/fastmcp_demo.egg-info/: PKG-INFO  SOURCES.txt
