[project]
name = "fastmcp-demo"
version = "0.1.0"
description = "A minimal MCP server using FastMCP with example tools, prompts, and resources"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
  "fastmcp>=0.1.0",
  "playwright>=1.40.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
